Huge commit, but I fixed the packaging and dependency structure of the codebase. "go get" should work fine now.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
-*.swp
-main
-*.test
+*.a
+*.bak
+*.dSYM
+*.o
 *.peg.go
-cayley
-cayley.cfg
+*.swo
+*.swp
+*.test
+*~
+/cayley
+/cayley.cfg
 leveldb/
 snappy/
-pkg/
