--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: go
 
+go:
+  - 1.2
+  - 1.3
+  - tip
+
 install:
   - go get github.com/jacobsa/ogletest
   - go get github.com/jacobsa/oglematchers
