Switch to the latest mgo path.
This is not only the right thing to do, as per the documentation of the
latest release (yesterday) but it should now be backed by git and not
bzr, which is a big plus and won't break our build so much.

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,5 @@ install:
   - go get github.com/syndtr/goleveldb/leveldb/iterator
   - go get github.com/syndtr/goleveldb/leveldb/opt
   - go get github.com/syndtr/goleveldb/leveldb/util
-  - go get labix.org/v2/mgo
-  - go get labix.org/v2/mgo/bson
+  - go get gopkg.in/mgo.v2
+  - go get gopkg.in/mgo.v2/bson
