--- a/cayley_appengine.cfg
+++ b/cayley_appengine.cfg
@@ -1,6 +1,6 @@
 {
 "database": "mem",
-"db_path": "30k.nt",
+"db_path": "30kmoviedata.nq.gz",
 "read_only": true,
 "load_size": 10000,
 "gremlin_timeout": 10
