Only run short tests on travis
Long tests are potentially very long, and may timeout internally. So
don't run them.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,6 @@ install:
   - go get github.com/syndtr/goleveldb/leveldb/util
   - go get gopkg.in/mgo.v2
   - go get gopkg.in/mgo.v2/bson
+
+script: go test -v -short ./...
+
