fix the test, remove -short from .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,5 @@ install:
   - go get gopkg.in/mgo.v2
   - go get gopkg.in/mgo.v2/bson
 
-script: go test -v -short ./...
+script: go test -v ./...
 
