--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ go:
 install:
   - go get github.com/badgerodon/peg
   - go get github.com/barakmich/glog
+  - go get github.com/cznic/mathutil
   - go get github.com/julienschmidt/httprouter
   - go get github.com/petar/GoLLRB/llrb
   - go get github.com/peterh/liner
