--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,16 @@
 language: go
 
+services:
+  - mongodb
+
 go:
   - 1.3
   - 1.3.1
   - tip
+
+env:
+  - CAYLEY_TEST_BACKEND=memstore
+  - CAYLEY_TEST_BACKEND=mongo
 
 install:
   - go get github.com/badgerodon/peg
