--- a/.travis.yml
+++ b/.travis.yml
@@ -27,9 +27,11 @@ install:
   - go get code.google.com/p/go-uuid/uuid
 
   # Google App Engine dependencies
+  - cd ..
   - wget https://storage.googleapis.com/appengine-sdks/featured/go_appengine_sdk_linux_amd64-1.9.18.zip
   - unzip -q go_appengine_sdk_linux_amd64-1.9.18.zip
   - export PATH=$PATH:$PWD/go_appengine/
+  - cd cayley
 
 script: 
   - go test -v ./...
