add gocql to .travis.yml post-rebase and fix build vs rebase on head

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ install:
   - go get github.com/syndtr/goleveldb/leveldb/opt
   - go get github.com/syndtr/goleveldb/leveldb/util
   - go get github.com/boltdb/bolt
+  - go get github.com/gocql/gocql
   - go get gopkg.in/mgo.v2
   - go get gopkg.in/mgo.v2/bson
   - go get code.google.com/p/go-uuid/uuid
