--- a/.travis.yml
+++ b/.travis.yml
@@ -3,26 +3,27 @@ language: go
 sudo: false
 
 go:
-  - 1.5
   - 1.6
+  - 1.7
   - tip
 
 install:
   # Install our tracked dependencies
   - go get -t ./...
-  - go get github.com/tools/godep
-  - godep restore
+  - curl -L https://github.com/Masterminds/glide/releases/download/v0.11.1/glide-v0.11.1-linux-amd64.tar.gz -o /tmp/glide.tar.gz
+  - mkdir ../glide && cd ../glide && tar -xzf /tmp/glide.tar.gz && export PATH=$PATH:$PWD/linux-amd64/ && cd ../cayley
+  - glide install
 
   # Google App Engine dependencies
   - cd ..
   - wget https://storage.googleapis.com/appengine-sdks/featured/go_appengine_sdk_linux_amd64-1.9.23.zip
   - unzip -q go_appengine_sdk_linux_amd64-1.9.23.zip
   - export PATH=$PATH:$PWD/go_appengine/
-  - $PWD/go_appengine/goapp get github.com/stretchr/testify/require
+  - $PWD/go_appengine/goapp get github.com/stretchr/testify/require github.com/pborman/uuid golang.org/x/net/context # FIXME
   - cd cayley
 
 script:
-  - go test -v ./...
+  - go test -v $(go list ./... | grep -v vendor/)
   - goapp test -v ./graph/gaedatastore
 
 matrix:
