--- a/.relego.yaml
+++ b/.relego.yaml
@@ -15,11 +15,11 @@ build:
       - "386"
       - amd64
 ld:
-  versionPath: "main.Version"
-  buildDatePath: "main.BuildDate"
+  versionPath: "github.com/cayleygraph/cayley/version.Version"
+  buildDatePath: "github.com/cayleygraph/cayley/version.BuildDate"
+  gitHashPath: "github.com/cayleygraph/cayley/version.GitHash"
 mains:
   - "./cmd/cayley"
-  - "./cmd/cayleyupgrade"
 include:
   - README.md
   - LICENSE
@@ -28,6 +28,6 @@ include:
   - docs
   - static
   - templates
-  - cayley.cfg.example
+  - cayley_example.yml
   - data
 outputDir: "$GOPATH/bin"
