--- a/Dockerfile-quickstart
+++ b/Dockerfile-quickstart
@@ -9,7 +9,7 @@ VOLUME [ "/data" ]
 
 COPY data/30kmoviedata.nq.gz /tmp/30kmoviedata.nq.gz
 
-RUN echo '{"database":"bolt","db_path":"/data/cayley","read_only":false}' > /data/cayley.cfg &&
+RUN echo '{"database":"bolt","db_path":"/data/cayley","read_only":false}' > /data/cayley.cfg && \
     cayley init -db bolt -dbpath /data/cayley -quads /tmp/30kmoviedata.nq.gz && \
     rm /tmp/30kmoviedata.nq.gz
 
