--- a/glide.yaml
+++ b/glide.yaml
@@ -40,3 +40,4 @@ import:
 - package: github.com/linkeddata/gojsonld
 - package: github.com/dop251/goja
 - package: github.com/go-sql-driver/mysql
+- package: github.com/dennwc/graphql
