--- a/glide.yaml
+++ b/glide.yaml
@@ -41,3 +41,4 @@ import:
 - package: github.com/dop251/goja
 - package: github.com/go-sql-driver/mysql
 - package: github.com/dennwc/graphql
+- package: github.com/qedus/nds
