--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: go
 sudo: false
 
 go:
-  - 1.8
+  - 1.9
   - tip
 
 install:
@@ -21,7 +21,7 @@ install:
   #  - cd cayley
 
 script:
-  - go test -v $(go list ./... | grep -v vendor/)
+  - go test -v ./...
   #  - goapp test -v ./graph/gaedatastore
 
 matrix:
