--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,58 +1,57 @@
 before:
   hooks:
     - go mod download
+    - go get github.com/gobuffalo/packr/v2/packr2
+    - packr2
 builds:
- - main: ./cmd/cayley
-   binary: cayley
-   env:
-    - CGO_ENABLED=0
-   goos:
-    - linux
-    - darwin
-    - windows
-   goarch:
-    - amd64
-    - '386'
-    - arm64
-    - arm
-   ignore:
-    - goos: windows
-      goarch: arm
-    - goos: windows
-      goarch: arm64
-    - goos: darwin
-      goarch: arm
-    - goos: darwin
-      goarch: arm64
-   ldflags:
-     - -s -w -X github.com/cayleygraph/cayley/version.Version={{.Version}} -X github.com/cayleygraph/cayley/version.GitHash={{.FullCommit}} -X github.com/cayleygraph/cayley/version.BuildDate={{.Date}}
+  - main: ./cmd/cayley
+    binary: cayley
+    env:
+      - CGO_ENABLED=0
+    goos:
+      - linux
+      - darwin
+      - windows
+    goarch:
+      - amd64
+      - "386"
+      - arm64
+      - arm
+    ignore:
+      - goos: windows
+        goarch: arm
+      - goos: windows
+        goarch: arm64
+      - goos: darwin
+        goarch: arm
+      - goos: darwin
+        goarch: arm64
+    ldflags:
+      - -s -w -X github.com/cayleygraph/cayley/version.Version={{.Version}} -X github.com/cayleygraph/cayley/version.GitHash={{.FullCommit}} -X github.com/cayleygraph/cayley/version.BuildDate={{.Date}}
 archives:
- - format: tar.gz
-   format_overrides:
-     - goos: windows
-       format: zip
-   wrap_in_directory: true
-   files:
-     - README.md
-     - LICENSE
-     - AUTHORS
-     - CONTRIBUTORS
-     - cayley_example.yml
-     - data/**/*
-     - docs/**/*
-     - static/**/*
-     - templates/**/*
+  - format: tar.gz
+    format_overrides:
+      - goos: windows
+        format: zip
+    wrap_in_directory: true
+    files:
+      - README.md
+      - LICENSE
+      - AUTHORS
+      - CONTRIBUTORS
+      - configurations/*
+      - data/*
 checksum:
-  name_template: 'checksums.txt'
+  name_template: "checksums.txt"
 snapshot:
   name_template: "{{ .Tag }}-dev"
 changelog:
   sort: asc
   filters:
     exclude:
-     - '^docs:'
-     - '^test:'
-     - '^ci:'
+      - "^docs:"
+      - "^test:"
+      - "^ci:"
 snapcrafts:
   - name: cayley
     publish: false # TODO(dennwc)
