ci: restore dummy file for packr

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ cache:
 script:
   - CGO_ENABLED=0 go build -o /tmp/cayley ./cmd/cayley
   - go run github.com/gobuffalo/packr/v2/packr2
+  - git checkout -- ./packrd/dummy.go
   - go test -v ./...
 
 after_success:
