Refactor HTTP and use external UI  - Add UI Download Script  - Use UI Download Script in Travis  - Use UI Download Script in Docker  - Reference UI Download Script in contributing.md  - Extract API V1 related code to internal/http/api_v1  - Extract CORS related code to internal/http/cors  - Extract Logs related code to internal/http/logs  - Cleanup API V2  - Call CORS and LogRequest middlewares once at http.go

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ matrix:
 install:
   - sudo snap install snapcraft --classic
   - go mod download
+  - go run cmd/download_ui/download_ui.go
 
 cache:
   directories:
