Only execlude cayley on top level in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,9 @@ cayley.json
 .cayley_history
 .DS_Store
 
-# The built binary
-cayley/
 dist/
 vendor/
 ui/
 packrd/packed-*
-cayley
+# The build binary
+/cayley
