--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ addons:
 
 go:
   - "1.13.x"
+  - "1.17.x"
   - tip
 
 matrix:
@@ -26,8 +27,11 @@ script:
   - CGO_ENABLED=0 go build -o /tmp/cayley ./cmd/cayley
   - go run github.com/gobuffalo/packr/v2/packr2
   - git checkout -- ./packrd/dummy.go
-  - go get -u golang.org/x/lint/golint
-  - bash lint.sh
+  - |
+    if [[ $TRAVIS_GO_VERSION =~ ^1\.17 ]]; then
+      go vet ./...
+
+    fi
   - go test -v ./...
 
 after_success:
