--- a/docs/k8s/cayley-mongo.yml
+++ b/docs/k8s/cayley-mongo.yml
@@ -93,7 +93,7 @@ spec:
     spec:
       initContainers:
       - name: cayley-init
-        image: cayleygraph/cayley:v0.7.5
+        image: ghcr.io/cayleygraph/cayley:v0.7.8
         command:
         - cayley
         - init
@@ -101,7 +101,7 @@ spec:
         - -a=mongo
       containers:
       - name: cayley
-        image: cayleygraph/cayley:v0.7.5
+        image: ghcr.io/cayleygraph/cayley:v0.7.8
         command:
         - cayley
         - http
