--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -20,12 +20,12 @@ jobs:
     name: Tests
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
-        go-version: '1.19'
+        go-version: '1.21'
 
     - name: Dependencies
       run: go mod download
@@ -46,12 +46,12 @@ jobs:
     needs:
       - tests
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
-          go-version: '1.19'
+          go-version: '1.21'
 
       - name: Dependencies
         run: go mod download
@@ -59,13 +59,8 @@ jobs:
       - name: Download UI
         run: go run cmd/download_ui/download_ui.go
 
-      - name: Run Packr
-        run: |
-          go run github.com/gobuffalo/packr/v2/packr2
-          git checkout -- ./packrd/dummy.go
-
       - name: Release
-        uses: goreleaser/goreleaser-action@v4
+        uses: goreleaser/goreleaser-action@v6
         if: startsWith(github.ref, 'refs/tags/v')
         with:
           version: latest
@@ -81,14 +76,14 @@ jobs:
       - tests
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Docker build
         run: |
           docker build -t $DOCKER_IMAGE_NAME:dev --build-arg VERSION=${{ github.ref_name }} .
 
       - name: Log in to the Container registry
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        uses: docker/login-action@v3
         if: startsWith(github.ref, 'refs/tags/') || (github.ref == 'refs/heads/master')
         with:
           registry: ghcr.io
